myservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    env: prod
  ports:
    - name: prim
      protocol: TCP
      port: 80
      targetPort: web-port
